test_suite/alan-2022-examples/failing/008770_mutation.alan
source h function i(boolean X34, boolean j function) begin relax end begin relax end
